css/index.css
/* ... */
.section--list {
  list-style: none;
  padding-left: 0;
}

/* 1.3. HEADER
   ========================================================================== */
#panel {
  background: white;
}

.header {
  /*background: url(../img/IMG_6176.jpg) center no-repeat;*/
  background: url(../img/header_background_7.jpg) center no-repeat;
  background-size: cover;
  padding-bottom: 150px;
  height: 100%;
  min-height: 120vh;
}

.header button {
  background: rgba(255, 255, 255, 0);
  border: none;
  outline: none;
  z-index: 9999;
} 

.fa-navicon {
  font-size: 3em;
  color: rgb(87, 88, 91);
}

.header--logo-mobil {
  margin-bottom: 10px;
}

.header--title-picture img {
  width: 60%;
  height: auto;
}

.header--title-picture {
  text-align: center;
  padding-top: 120px;
}

.header--button {
  margin-top: 30px;
  border: 1px solid;
  text-transform: lowercase;
}

.header--button-findout {
  background: none;
  color: black;
  border-color: black;
}

.header--button-register {
  background: rgba(240, 97, 56, 1.0);
  box-shadow: 0px 0px 5px black;
  border-color: white;
  color: white;
}

.header--button:hover {
  -webkit-transition: background-color .5s;
  -o-transition: background-color .5s;
  transition: background-color .5s;
}

.header--button-findout:hover {
  border-color: black;
  background: white;
}

.header--button-register:hover,
.cbp-af-header .nav--register-active a:hover
 {
  border-color: white;
  background-color: rgba(240, 97, 56, 0.8);
  color: white;
}

@media (min-width: 768px) {
  .header--title-picture img {
    width: 45%;
  }

  .header--title-picture {
    padding-top: 15%;
  }
}

@media (min-width: 992px) {
  .header--title-picture img {
    width: 35%;
}

  .header--title-picture{
    padding-top: 200px;
  }
}
/* ==========================================================================
   2. ABOUT THE CONFERENCE
   ========================================================================== */
.about {
  width: 90%;
  margin: 0 auto;
  padding-bottom: 30px;
  position: relative;
}

.about__header h1 {
  text-transform: lowercase;
  margin-bottom: 35px;
  font-size: 30px;
  color: rgb(155,155,155);
}

.about__main {
  text-align: left;
}

#welcome-slogan {
  text-transform: lowercase;
  color: rgb(155,155,155);
  margin-top: 12px;
  font-size: 23px;
  text-align: left;
}

.headword--colour {
  color: rgba(240, 97, 56, 0.8);
}

.direction--link {
  color: rgb(155,155,155);
}

.direction--link:hover {
  color: rgba(240, 97, 56, 0.8);
  text-decoration: none;
}

@media (min-width: 992px) {
  .about {
    width: 80%;
    padding-bottom: 85px;
  }

  .about__main {
  -webkit-column-count: 2;
  -webkit-column-gap: 50px;
  text-align: justify;
  }

  #welcome-slogan {
    margin-top: 21px;
  }
}

/* ==========================================================================
   3. TARGET GROUPS & GOALS
   ========================================================================== */
.target__all {
  width: 90%;
  margin: 0 auto;
  padding-bottom: 70px;
}

.target__header h1 {
  text-transform: lowercase;
  margin-bottom: 35px;
  font-size: 30px;
  color: rgb(155,155,155);
}

.target__main {
  text-align: left;
}

.target--column {
  padding-left: 0px;
  padding-right: 0px;
}

.target--column span {
  color: rgb(240, 97, 56);
}

@media (min-width: 992px) {
  .target {
    padding-bottom: 150px;
  }

  .target__all {
    width: 80%;
    padding-bottom: 0px;
  }

  .target__main {
    text-align: justify;
  }

  #target-row {
    margin-top: 15px;
    margin-bottom: 15px;
  }

  #first-target-column {
    padding-right: 25px;
  }

  #second-target-column {
    padding-left: 25px;
  }
}

/* ==========================================================================
   4. TILES
   ========================================================================== */
.tiles {
  width: 100%;
  margin: 0 auto;
  padding-bottom: 20px;
}

.tiles--image {
  background-size: cover;
  height: 150px;
  display: table;
  width: 100%;
}

.tiles--image h1 {
  color: white;
  text-align: center;
  margin-top: 0px;
  margin-bottom: 0px;
  display: table-cell;
  vertical-align: middle;
}

.tiles__main {
  text-align: left;
}

.tiles--column {
  padding-left: 0px;
  padding-right: 0px;
}

.tiles__text {
  width: 90%;
  margin: 30px auto 0;
  padding-bottom: 70px;
}

.tiles__text h1 {
  text-transform: lowercase;
  margin-bottom: 35px;
  font-size: 30px;
  color: rgb(155,155,155);
}

@media (min-width: 992px) {
  .tiles {
    width: 100%;
    padding-top: 0px;
    padding-bottom: 0px;
  }

  .tiles--image {
    height: 100vh;
  }

  .tiles__main {
    text-align: justify;
  }

  .row--viewport {
    height: 100vh;
  }

  .tiles--column {
    /*height: 534px;*/
    height: 100vh;
    display: table;
  }

  .tiles__text {
    display: table-cell;
    vertical-align: middle;
    padding-right: 10%;
    padding-left: 10%;
    margin-top: 0;
    padding-bottom: 0px;
  }
}

/* 4.1. FORMAT
   ========================================================================== */
.format--image {
  background: url("../img/seminarraum.jpg") center;
}

@media (min-width: 992px) {
  #second-format-column {
    padding: 0px 80px;
  }
}

/* 4.2. LOCATION
   ========================================================================== */
.location--image {
  background: url("../img/IMG_7050.jpg") center;
}

#first-location-column {
  min-height: 375px;
}

@media (min-width: 992px) {
  #first-location-column {
    padding: 0px 80px;
    min-height: 0;
  }
}

/* 4.3. CALL FOR PAPERS
   ========================================================================== */
.papers--image {
  background: url("../img/IMG_6210.jpg") center;
}

@media (min-width: 992px) {
  #second-papers-column {
    padding: 0px 80px;
  }

  .papers--column {
    margin-bottom: -88px; /* allows to stop anchor as soon as papers is hidden by the navbar */
  }

  #papers-row {
    margin-bottom: -88px; /* allows to stop anchor as soon as papers is hidden by the navbar */
  }
}
/* ... */

